langtools/test/tools/javac/annotations/typeAnnotations/failures/CantAnnotatePackages.out
CantAnnotatePackages.java:20:14: compiler.err.cant.type.annotate.scoping.1: TA
CantAnnotatePackages.java:21:9: compiler.err.cant.type.annotate.scoping.1: TA
CantAnnotatePackages.java:22:14: compiler.err.cant.type.annotate.scoping.1: TA
CantAnnotatePackages.java:24:11: compiler.err.cant.resolve.location: kindname.class, CantAnnotatePackages_TB, , , (compiler.misc.location: kindname.class, CantAnnotatePackages, null)
CantAnnotatePackages.java:24:35: compiler.err.cant.type.annotate.scoping.1: CantAnnotatePackages_TB
CantAnnotatePackages.java:15:18: compiler.err.cant.type.annotate.scoping.1: @TA
6 errors
